--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
       <artifactId>rxjava</artifactId>
       <version>3.1.8</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-http-server-netty</artifactId>
